
Major changes for release 1.0.2:
------------------------------

Removed conflicting arch-logo files.
Release build preparations.

Major changes for release 1.0:
------------------------------

Initial release of this package.
