@@ -1,7 +1,8 @@
 
-Major changes for release 1.0.2:
+Major changes for release 1.0.3:
 ------------------------------
 
+Added vtwm and mwm icons.
 Removed conflicting arch-logo files.
 Release build preparations.
 
